# usaco_cpp

./: CMakeLists.txt  README.md  t.cpp  t1.cpp  usaco.xlsx  usaco_cpp.xlsx
bronze/15-1/: 1.cpp  1512.cpp
bronze/15-12/: 15121.cpp  3.cpp
bronze/16-1/: 1.cpp  1613.cpp  1613_1.cpp
bronze/16-12/: 1.cpp  2.cpp  3.cpp
bronze/17-1/: 1.cpp  2.cpp  3.cpp
bronze/17-12/: 1.cpp
bronze/18-1/: 2.cpp
bronze/19-12/: 2.cpp
bronze/19-2/: 1.cpp
bronze/19-3/: 1933.cpp
bronze/20-1/: 3-opt-50p.cpp  3-opt-fix.cpp  3.cpp
bronze/21-2/: 3.cpp
bronze/22-1/: 3.cpp
bronze/22-12/: 1.cpp
bronze/22-2/: 1-bao-90p.cpp  1.cpp  2.cpp  2223.cpp  2223_1.cpp
bronze/23-1/: 2312.cpp
bronze/23-2/: 2321.cpp  2322.cpp  2323.cpp
bronze/25-1/: 3.cpp
gold/15-12/: 2.cpp
gold/16-12/: 2.cpp
gold/17-1/: 2.cpp
gold/18-12/: 3.cpp
gold/18-3/: 3.cpp
gold/19-1/: 3.cpp
gold/19-12/: 1.py
gold/19-3/: 1.cpp  1_1.cpp
gold/21-1/: 1.cpp  2.cpp  2.py  2_1.py
gold/21-12/: 1.cpp
gold/21-2/: 1.cpp  2.cpp
gold/22-1/: 1.cpp
gold/22-12/: 1.cpp  2.cpp
gold/23-1/: 1.cpp  2.cpp  2_1.cpp
gold/23-12/: 1.cpp  2.cpp
gold/23-2/: 1.cpp
gold/24-12/: 1.cpp  2.cpp
gold/24-2/: 1.cpp  2.cpp  3.cpp
gold/25-1/: 1.cpp  2.cpp
gold/25-2/: 1.cpp  3.cpp
gold/cses/: 1647.cpp  1648.cpp  1649.cpp  1650.cpp  1651.cpp
silver/13-3/: 1.py
silver/14-1/: 2.cpp
silver/15-12/: 1.cpp  2.cpp  3.cpp
silver/16-1/: 2.cpp  2_bl.cpp  3.cpp  3_1.cpp
silver/16-12/: 1.cpp  1_full.cpp  2.cpp  3.cpp
silver/16-2/: 3.cpp
silver/16-3/: 2.cpp  3.cpp
silver/17-1/: 1.cpp  2.cpp  3.cpp  cowcode.in
silver/17-12/: 1.cpp  2.cpp  2_1.cpp  2_2.cpp  3_3.cpp  3_4.cpp
silver/17-2/: 1.cpp  1_mul.cpp  1_std_lowerbound.cpp  2.cpp  3.cpp  helpcross.in
silver/17-3/: 1.cpp  3.cpp
silver/18-1/: 1.cpp  2.cpp  3.cpp  lifeguards.out
silver/18-12/: 1.cpp  2.cpp  3.cpp
(+110 files in other folders)
