cmake_minimum_required(VERSION 3.24)
project(usaco_cpp)

set(CMAKE_CXX_STANDARD 17)

add_executable(t t.cpp)
add_executable(2123 bronze/21-2/3.cpp)
add_executable(19122 bronze/19-12/2.cpp)
add_executable(3 bronze/20-1/3.cpp)
add_executable(2013 bronze/20-1/3.cpp)
add_executable(16121 bronze/16-12/1.cpp)
add_executable(1611 bronze/16-1/1.cpp)
add_executable(2213 bronze/22-1/3.cpp)
add_executable(2221 bronze/22-2/1-bao-90p.cpp)

add_executable(3-opt bronze/20-1/3-opt-50p.cpp)
add_executable(3-opt-fix bronze/20-1/3-opt-fix.cpp)
add_executable(22211 bronze/22-2/1.cpp)

add_executable(1511 bronze/15-1/1.cpp)